# KeggMapsKGML2SVG

./: .dockerignore  .gitignore  Dockerfile  KGML2SVGCLASS_edit22042024.PY  README.md  Readme.md  annotation_setting_ap.py  color_function_base.py  color_functions.py  download_data.py  hello.py  kegg_annotation.py  kegg_pathway_map.py  keggpathwaymaps.py  main.py  pathway.py  pathway_component.py  preprocess_kegg_data.py  preprocess_pathway_data.py  pyproject.toml  shape.py  svg_content.py  svg_content_element_tree_not_a_class.py
KMW/: README.md  color_function_base.py  color_functions_linera_gradient.py  download_data.py  geometry_annotation.py  kegg_file.py  kegg_pathway_map.py  svg_content.py
KMW/keggmapwizard/: annotation_setting_ap.py  color_functions_color_groups.py  kegg_file.py  main.py  pathway.py  svg_content.py
html/: legend.js  style.css
html/html/: display_SVG.html
html/js_lib/clickevent/: click.js
html/js_lib/color/: color.js
html/js_lib/save/: save_data.js
keggmapwizard/: annotation_settings.py  base_image.py  color_function_base.py  color_functions_color_groups.py  config.py  download_data.py  geometry.py  geometry_annotation.py  kegg_file.py  kegg_pathway_map.py  main.py  main_ori.py  pathway.py  pathway_component.py  svg_content.py  utils.py
keggmapwizard/tests/: test_base_image.py
tests/: test_base_image.py  test_color_function_base.py  test_download_data.py  test_geometry.py  test_geometry_annotation.py  test_kegg_file.py  test_pathway.py  test_pathway_component.py  test_svg_content.py
